--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: 🧪 DataTracks Connection Tests
+name: 📦 Publish to crate.io
 on:
   workflow_run:
     workflows: ["📜 Protocol Release"]
@@ -16,7 +16,7 @@ jobs:
         run: cargo login ${{ secrets.CRATES_IO }}
       - name: Build binaries in "release" mode
         run: cargo build -r
-      - name: "Package for crates.io"
+      - name: "📦 Package for crates.io"
         run: cargo package # publishes a package as a tarball
-      - name: "Publish to crates.io"
+      - name: "📢 Publish to crates.io"
         run: cargo publish # publishes your crate as a library that can be added as a
