--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+          token: ${{ secrets.TRACKVIEW }}
 
       - name: Checkout Rust Application Repository
         uses: actions/checkout@v4
