switched to manual pushing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,6 @@
 name: 📦 Publish to Crates.io
 on:
-  workflow_run:
-    workflows: ["📜 Protocol Release"]
-    types:
-      - completed
+  workflow_dispatch:
 
 jobs:
   build:
